update: UI views & improvements